@@ -1897,9 +1897,9 @@
        [(= $CALL t)          (sum-items (+ cnt 1) ($call.proc iform) (* ($call.args iform)))]
        [(= $ASM t)           (sum-items (+ cnt 1) (* ($asm.args iform)))]
        [(= $IT t)            cnt]
+       [(= $RECEIVE t)       (sum-items (+ cnt 1) ($receive.vals iform) ($receive.body iform))]
        [else
-        (error "[internal error] iform-count-size-upto: unknown iform tag:"
-               (tag iform))]
+        (error 'compiler (format "[internal error] iform-count-size-upto: unknown iform tag:~a" (tag iform)))]
        )))
   (define (rec-list iform-list cnt)
     (cond ((null? iform-list) cnt)
