@@ -1,5 +1,22 @@
 (import (rnrs)
         (mosh test))
 
+(define-syntax test-transcoders
+    (syntax-rules ()
+      [(_ bytevector->string string->bytevector)
+       (begin
+         (string->bytevector "a\nb" (make-transcoder ))
+         (string->bytevector "a\nb" (make-transcoder))
+         )]))
 
-(display (bytevector->string #vu8(254 255 0 97 0 112 0 112 3 187 0 101) (make-transcoder (utf-16-codec))))
+(let (
+          [string->bytevector-via-port
+           (lambda (str tr)
+             (let-values ([(p get) (open-bytevector-output-port tr)])
+               (put-string p str)
+               (get)
+               ))])
+      (test-transcoders bytevector->string-via-port
+                        string->bytevector-via-port))
+
+(test-end)
